--- a/alembic.ini
+++ b/alembic.ini
@@ -52,7 +52,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:postgres@localhost/de_challenge
+sqlalchemy.url = postgresql+psycopg2://postgres:postgres@db/de_challenge
 
 
 [post_write_hooks]
