--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,35 @@
 alembic==1.7.7
+asn1crypto==0.24.0
+attrs==22.1.0
+certifi==2022.6.15
+click==8.0.4
+click-plugins==1.1.1
+cligj==0.7.2
+cryptography==2.1.4
+Fiona==1.8.21
+geographiclib==1.52
+geopandas==0.9.0
+geopy==2.2.0
 greenlet==1.1.3
+idna==2.6
 importlib-metadata==4.8.3
 importlib-resources==5.4.0
+keyring==10.6.0
+keyrings.alt==3.0
 Mako==1.1.6
 MarkupSafe==2.0.1
+munch==2.5.0
 numpy==1.19.5
 pandas==1.1.5
 psycopg2==2.9.3
+pycrypto==2.6.1
+PyGObject==3.26.1
+pyproj==3.0.1
 python-dateutil==2.8.2
 pytz==2022.2.1
+pyxdg==0.25
+SecretStorage==2.3.1
+Shapely==1.8.4
 six==1.16.0
 SQLAlchemy==1.4.40
 typing_extensions==4.1.1
